--- a/index.html
+++ b/index.html
@@ -22,10 +22,27 @@
             z-index: 5;
             color: #fff;
         }
+        #posts > div {
+            height: 300px;
+        }
     </style>
+    <link rel="stylesheet" href="css/jquery.growl.css">
 </head>
 <body>
     <h1 class="text-uppercase text-center">gallery</h1>
+    <div class="form col-md-8 col-md-offset-2">
+        <form action="" id="add-post">
+            <div class="form-group">
+                <label for="title">Title</label>
+                <input class="form-control" type="text" id="title" name="title">
+            </div>
+            <div class="form-group">
+                <label for="title">IMG</label>
+                <input class="form-control" type="text" id="img" name="img">
+            </div>
+            <button class="btn btn-success"> ADD </button>
+        </form>
+    </div>
     <div class="container">
         <div class="row" id="posts">
             
@@ -35,6 +52,7 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/jquery.growl.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
